[Feature] Search (#9)
* Search filters for /recipes endpoint
