# recipes/recipes_model.go
@@ -41,6 +41,11 @@ type Ingredients struct {
 	Unit string `json:"unit"`
 }
 
+const (
+	//NoAmountIngredient is the amount value for ingredients when this field is not used
+	NoAmountIngredient = -1.0
+)
+
 //RecipeID is a data type that provides a unique id for each recipe
 type RecipeID string
 
@@ -96,26 +101,33 @@ func NewInvalidRecipePicture() *RecipePicture {
 	}
 }
 
+//RecipeSearchFilter models a search query to filter recipes
+type RecipeSearchFilter struct {
+	Name        string   `json:"name"`
+	Ingredient  []string `json:"ingredients"`
+	Description string   `json:"description"`
+}
+
 //Recipes interface is an abstraction for the provider of a collection of recipes, i.e., a data-base or a cache
 type Recipes interface {
 	List() []*Recipe
+	IDs(filterQuery *RecipeSearchFilter) []string
 	Num() int64
-	IDs() []string
 	Get(id RecipeID) *Recipe
+	GetByName(name string) (*Recipe, error)
 	Picture(id RecipeID, name string) *RecipePicture
 	Pictures(id RecipeID) map[string]*RecipePicture
 	Random() *Recipe
 	Insert(recipe *Recipe) error
 	Update(id RecipeID, recipe *Recipe) error
 	AddPicture(pic *RecipePicture) error
-	Remove(name string) error
-	RemoveByID(id RecipeID) error
-	GetByName(name string) (*Recipe, error)
+	Remove(id RecipeID) error
+	RemoveByName(name string) error
 }
 
 const (
 	//NotSupportedError informs clients about operations that are not supported by a Recipes provider
-	NotSupportedError = "operation not supported"
+	NotSupportedError = "recipe operation not supported"
 )
 
 //NewInvalidRecipe returns an empty Recipe object. The ID of the returned Recipe is InvalidRecipeID.
@@ -138,7 +150,7 @@ func NewRecipe(id RecipeID) *Recipe {
 	}
 }
 
-//JSON returns the encoded version of the recipe
+//JSON returns the encoded version of the recipe. If an error occurs, '{}' is returned.
 func (r *Recipe) JSON() []byte {
 	bytes, err := json.Marshal(r)
 	if err != nil {
@@ -153,7 +165,7 @@ func (r *Recipe) String() string {
 	return string(r.JSON())
 }
 
-//ScaleBy a factor all portions of the recipe
+//ScaleBy a factor (of servings) all ingredients of the recipe
 func (r *Recipe) ScaleBy(factor float64) {
 	for i := range r.Ingredients {
 		if r.Ingredients[i].Amount > 0 {
@@ -162,9 +174,9 @@ func (r *Recipe) ScaleBy(factor float64) {
 	}
 }
 
-//ScaleTo a desired number of portions
-func (r *Recipe) ScaleTo(portions int) {
-	factor := float64(portions) / float64(r.Servings)
-	r.Servings = int8(portions)
+//ScaleTo a desired number of servings
+func (r *Recipe) ScaleTo(servings int8) {
+	factor := float64(servings) / float64(r.Servings)
+	r.Servings = servings
 	r.ScaleBy(factor)
 }
